# programare_medicala_gtkapp

./: CMakeLists.txt  app_widgets.h  functii.c  functii.h  login-register.h  main.c  medic_info.h  medici.txt  programare_medicala.c  programare_medicala.h  programari.txt  style.css  users.txt
